# aiida-cp2k

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  .readthedocs.yml  .travis.yml  Dockerfile  LICENSE.txt  MANIFEST.in  README.md  README.rst  code_setup.txt  conftest.py  install_travis_env.sh  pyproject.toml  pytest.ini  run_tests.sh  setup.json  setup.py  test.py
.ci/: check_travis_tag.py  check_version.py  run_tests.sh
.docker/: cp2k-code.yml
.docker/init/: add-codes.sh
.docker/my_init.d/: add-codes.sh  add-pgsql-bin-to-path.sh
.docker/opt/: add-codes.sh
.github/workflows/: ci.yml  publish.yml
aiida_cp2k/: __init__.py  calc.py  calculations.py  parser.py  parsers.py  utils.py
aiida_cp2k/calculations/: __init__.py  cp2k.py
aiida_cp2k/cli/: __init__.py
aiida_cp2k/fixers/: __init__.py  geometry_optimization.py
aiida_cp2k/parsers/: __init__.py
aiida_cp2k/tests/: __init__.py  test_bands.py  test_dft.py  test_failure.py  test_geopt.py  test_input_generator.py  test_mm.py  test_no_struct.py  test_parser.py  test_precision.py  test_restart.py
aiida_cp2k/utils/: __init__.py  datatype_helpers.py  input_generator.py  other_utilities.py  parser.py  workchains.py
aiida_cp2k/workchains/: __init__.py  aiida_base_restart.py  bands.py  base.py  binding_energy.py  multistage.py  multistage_standard.yaml
aiida_cp2k/workflows/: __init__.py  aiida_base_restart.py  atomic_convention-1.py  atomic_convention1.py  dft4steps.py  dftbandstructure.py  dftbase.py  dftcellopt.py  dftgeoopt.py  dftmd.py  dftmdnvt.py  dftrobustcellopt.py  dftrobustgeoopt.py  dftutilities.py
doc/cp2k_plugin/: BASIS_SET_SMALL  cp2k_run_MD.py  cp2k_run_calc.py  cp2k_submit_test.py  cp2k_submit_test.xyz  parse.py  parse_potentials.py  parse_print_sections.py  parse_xyz.py  test_cp2k_basisset.py  try_cp2k.py  (+2 more)
docs/: Makefile
gaussianbasisset/: gaussianbasis.py
input_plugin/: cp2k.py
test/: check_version.py  configure_aiida.sh  install_travis_env.sh  run_tests.sh  test.py  test_datatype_helpers.py  test_dft.py  test_failure.py  test_gaussian_datatypes.py  test_geopt.py  test_input_generator.py  test_mm.py  test_no_struct.py  test_parser.py  test_parsers.py  test_precision.py  test_restart.py  test_travis_tag.py  test_version.py  test_version_agreement.py  test_walltime.py  test_xyz.py  utils.py
(+160 files in other folders)
